@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Trigger auto save draft in dynamic view if attachments have changed.
 * [mms] SECURITY: Fix XSS in message and search screens resulting from a user-defined flag label (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Improved UI for dropping attachments on dynamic compose screen.
 * [mms] Fix manually loading all addresses in a header.
@@ -3294,6 +3295,7 @@
    <date>2013-09-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Trigger auto save draft in dynamic view if attachments have changed.
 * [mms] SECURITY: Fix XSS in message and search screens resulting from a user-defined flag label (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Improved UI for dropping attachments on dynamic compose screen.
 * [mms] Fix manually loading all addresses in a header.
