@@ -2,6 +2,7 @@
 v6.1.5-git
 ----------
 
+[mms] Trigger auto save draft in dynamic view if attachments have changed.
 [mms] SECURITY: Fix XSS in message and search screens resulting from a
       user-defined flag label (João Machado <geral@jpaulo.eu>).
 [mms] Improved UI for dropping attachments on dynamic compose screen.
